fix to iframe not centered on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -464,6 +464,8 @@ footer {
         margin: 0 auto;
         display: flex;
         flex-direction: row;
+        margin-left: 5px;
+        padding-left: 10px;
 }
 
     #right-image-outer, #left-image-outer {
